syntax="proto3";

package object_builder_service;
option go_package="genproto/object_builder_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";


service VersionHistoryService {
    rpc Create(CreateVersionHistoryRequest) returns (google.protobuf.Empty) {}
    rpc GatAll(GetAllRquest) returns (ListVersionHistory) {}
    rpc Update(UsedForEnvRequest) returns (google.protobuf.Empty) {}
}

message GetAllRquest {
    string project_id = 1;
    int32 limit = 2;
    int32 offset = 3;
    string type = 4;
    string env_id = 5;
}

message VersionHistory {
    string id = 1;
    string action_source = 2;
    string action_type = 3;
    string previus = 4;
    string current = 5;
    map<string, bool> used_envrironments = 6;
    string date = 7;
    UserInfo user_info = 8;
    string request = 9;
}

message CreateVersionHistoryRequest {
    string id = 1;
    string action_source = 2;
    string action_type = 3;
    string previus = 4;
    string current = 5;
    map<string, bool> used_envrironments = 6;
    string date = 7;
    string user_info = 8;
    string request = 9;
}

message ListVersionHistory {
    repeated VersionHistory histories = 1;
    string project_id = 2;
}

message UsedForEnvRequest {
    repeated string ids = 1;
    string env_id = 2;
    string project_id = 3;
}

message UserInfo {
    string id = 1;
    string name = 2;
}